--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body.lock{
 	margin: 0 auto ;
 	box-sizing: border-box;
 	overflow: hidden; 
+	padding: 0px 5px;
 }
 
 .top {
@@ -79,9 +80,11 @@ header{
 	position: relative;
 	font-size: 15px;
 	font-weight: 500;
-	padding: 10px 5px;
+	padding: 0px 5px;/*был 10пх верх-низ*/
 	transition-duration: 0.3s;
 }
+
+
 
 @media screen and (max-width: 1040px) {
 	.menu__list>li:last-child {
@@ -92,7 +95,7 @@ header{
 
 .arrow-down{
 	display: inline-block;
-	margin:0 -5px 1px 2px;
+	margin:0 10px 1px 2px;
 	width: 0;
 	height: 0;
 	border-top: 5px solid black;
@@ -100,11 +103,13 @@ header{
 	border-left: 5px solid transparent;
 	transition-duration: 0.3s;
 }
-.menu__link:hover .arrow-down{
+
+@media (min-width: 1023px) {
+.menu__list li:first-child:hover .arrow-down{
 	border-top: 5px solid #ABD373;
 	margin-bottom: 0px;
 }
-
+}
 .menu__list>li:first-child {
 	padding-left: 0;
 }
@@ -115,9 +120,9 @@ header{
 }
 }*/
 
-.menu__list li a{
+.menu__list li a {
 	line-height: 25px;
-    margin-right: 1.5em;
+    margin-right: 6px;
     cursor: pointer;
     text-align: left;
     border-bottom: 1px solid transparent;
@@ -126,8 +131,14 @@ header{
 
 .menu__link {
 	position: relative;
-}
+	line-height: 25px;
+	cursor: pointer;
+    text-align: left;
+    border-bottom: 1px solid transparent;
+    color: #333;
 
+}
+@media (min-width: 1023px) {
 .menu__link:hover {
 	transition-duration: .4s;
 	border-bottom: 1px solid #ABD373;
@@ -136,7 +147,7 @@ header{
 .sub-menu2__link:hover,.sub-menu__link:hover {
 	color: #ABD373;
 }
-
+}
 @media screen and (min-width: 1024px) {
 	.top__menu, .top__contacts {
 	flex: 40%;
@@ -151,6 +162,16 @@ header{
 	opacity: 1;
 	visibility: visible;
 	/*transition-duration: 0.5s;*/
+}
+}
+
+@media screen and (max-width: 1023px) {
+	.top__menu, .top__contacts {
+	flex: 33.333%;
+}
+.top__logo {
+	flex: 33.3333%;
+	text-align: center;
 }
 }
 
@@ -187,9 +208,11 @@ header{
 	border-left: 5px solid black;
 	transition-duration: 0.3s;
 }
+@media (min-width: 1023px) {
 .sub-menu__link:hover .arrow-right{
 	border-left: 5px solid #ABD373;
 	margin-left: 25px;
+}
 }
 
 .sub-menu2__list {
@@ -266,8 +289,8 @@ header{
 		width: 30px;
 		height: 20px;
 		z-index: 3;
-		left: -45px;
-		top: 0;
+		left: 10px;
+		top: 3px;
 	}
 	.burger span{
 		background-color: #A9D47A;
@@ -690,6 +713,11 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
     cursor: pointer;
 }
 
+@media (max-width: 330px) {
+	.swiper-slide__button {
+		padding: 5px 15px;
+	}
+}
 @media (max-width: 768px){
 	.swiper-slide__text {
 		width: 40%;
@@ -821,6 +849,7 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	.products__item-button {
 		bottom: 20px;
 		left: 20px;
+		padding: 6px;
 	}
 }
 @media screen and (max-width: 620px){
@@ -831,6 +860,7 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	}
 }
 
+@media (min-width: 1023px) {
 .products__item:hover .products__item-picture {
 	background-size: 105% 105%;
 	opacity: 0.6;
@@ -840,7 +870,7 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	background-color: #A9D47A;
 	color: white;
 }
-
+}
 
 /*-------------ВТОРОЙ СЛАЙДЕР "БУКЕТЫ ИЗ РОЗ"              */
 
@@ -892,11 +922,12 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	margin: 5px 5px;
 }
 
+@media (min-width: 1023px) {
 .slider__item:hover {
 	webkit-box-shadow: -2px 2px 81px -27px rgba(0, 0, 0, 0.3);
     box-shadow: -2px 2px 81px -27px rgba(0, 0, 0, 0.3);
 }
-
+}
 .slider__item-picture {
 	height: 335px;
 	background-repeat: no-repeat;
@@ -905,7 +936,11 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	overflow: hidden;
 	transition: background 0.2s ease;
 }
-
+@media (max-width:445px) {
+	.slider__item-picture {
+		height: 250px;
+	}
+}
 
 .slider__item-top {
 	transition: .3s all; 
@@ -990,11 +1025,10 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	line-height: 1.3;
     font-size: 15px;
     font-family: 'Montserrat', sans-serif;
-    margin-bottom: 20px;
 }
 
 /*----------ХОВЕРЫ -----------*/
-
+@media (min-width: 1023px) {
 .slider__item:hover .slider__item-top{
 display: none;
 }
@@ -1013,8 +1047,7 @@ display: none;
 .slider__item-desc a:hover {
 	color: #7dba28;
 }
-
-
+}
 
 /*--------Третий слайдер "Букеты с фруктами"--------*/
 
@@ -1243,7 +1276,7 @@ color: #333333;
 	}
 	.article-body {
 		width: 100%;
-		padding: 0 15px 15px 15px;
+		padding: 15px 0px;
 	}
 }
 
@@ -1360,4 +1393,63 @@ footer {
 	.content-social {
 		padding-left: 30%;
 	}
+}
+
+
+
+/* ПЕРВАЯ СТРАНИЦА БУКЕТЫ ИЗ РОЗ */
+.page {
+	padding-top: 20px;
+	 }
+.breadcrumbs {
+	margin-left: 25px;
+}
+.breadcrumbs span {
+	color: red;
+}
+.breadcrumbs-link {
+		transition-duration: 0.3s;
+	color: #333;
+}
+
+@media (min-width: 1023px) {
+.breadcrumbs-link:hover {
+		color: #A9D47A;
+}
+}
+.slash:after {
+	content: "/";
+	margin: 0 5px;
+}
+
+.page>.slider-title {
+	margin:30px auto ;
+}
+
+.page-catalogue {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content:space-around;
+}
+
+.page-catalogue>.slider__item {
+	min-width: 30%;
+	margin-bottom: 80px;
+}
+@media (max-width: 1030px) {
+	.page-catalogue>.slider__item {
+	max-width: 230px;
+}
+}
+@media (max-width: 425px) {
+	.page-catalogue>.slider__item {
+	max-width: 180px;
+
+}
+}
+/*СТИЛИ ДЛЯ КАРТИНОК СЛАЙДЕРА */
+
+.slider__item-picture {
+	background-position: center;
 }
