--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,8 @@ header{
     display: block;
 }
 
-.mobile__menu_container ul li a.mobile__menu_menu-first, .mobile__menu_container ul li a.mobile__menu_menu-second {
+.mobile__menu_container ul li a.mobile__menu_menu-first,
+.mobile__menu_container ul li a.mobile__menu_menu-second{
 	background: #ffffff url(../icons/arrow_right.svg) right 20px center no-repeat;
     background-size: 20px;
 }
@@ -390,6 +391,8 @@ header{
 	overflow: auto;
     max-height: 100%;
     padding-bottom: 30px;
+    line-height: 8px;
+    padding-top: 10px;
 }
 .parent {}
 .back {}
@@ -442,7 +445,8 @@ header{
 		line-height: 8px;
 	}
 
-	.mobile__menu_container ul li a.mobile__menu_menu-first, .mobile__menu_container ul li a.mobile__menu_menu-second {
+	.mobile__menu_container ul li a.mobile__menu_menu-first,
+	 .mobile__menu_container ul li a.mobile__menu_menu-second {
 	background: #ffffff url(../icons/arrow_left.svg) left 20px center no-repeat;
     background-size: 20px;
 }
@@ -938,14 +942,16 @@ div.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
 	overflow: hidden;
 	transition: background 0.2s ease;
 }
-@media (max-width:445px) {
+@media (max-width: 445px) {
 	.slider__item-picture {
-		height: 250px;
+		max-height: 250px;
 	}
 	.slider__item {
 		margin: 5px 0px;
 	}
 }
+
+
 
 .slider__item-top {
 	transition: .3s all; 
@@ -1459,8 +1465,15 @@ footer {
 	.page-catalogue>.slider__item {
 	max-width: 180px;
 	flex: 0 0 50%;
-
 }
+}
+
+@media (max-width: 490px) {
+	.page-catalogue>.slider__item {
+	flex: 0 0 50%;
+}
+}
+
 }
 /*СТИЛИ ДЛЯ КАРТИНОК СЛАЙДЕРА */
 
