--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,7 @@ header{
 
 header{
 	padding-top: 5px;
+	margin: 0 auto;
 }
 .menu__list>li:first-child{
 	font-size: 15px;
@@ -375,7 +376,7 @@ header{
 	-webkit-transform: translateX(300px);
     transform: translateX(300px);
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -392,7 +393,6 @@ header{
     max-height: 100%;
     padding-bottom: 30px;
     line-height: 8px;
-    padding-top: 10px;
 }
 .parent {}
 .back {}
@@ -454,6 +454,7 @@ header{
 .mobile__menu_container ul li a.back{
 	background: #fff url(../icons/arrow_right.svg) right 0px no-repeat;
 	margin-right: 15px; 
+
 }
 	.burger {
 		position: absolute;
