--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ header{
 	z-index: 10201;
 	transition: all 200ms;
 	position: fixed;
-    top: 50px;
+    top: 40px;
     left: 0;
     height: 100%;
 }
@@ -393,6 +393,11 @@ header{
     max-height: 100%;
     padding-bottom: 30px;
     line-height: 8px;
+    top: 40px;
+}
+
+.mobile__menu_content ul {
+
 }
 .parent {}
 .back {}
@@ -401,7 +406,7 @@ header{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	top: 69px;
+	top: 37px;
 	left: 0;
 	z-index: 10200;
 	display: none;
