--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ header{
 	z-index: 10201;
 	transition: all 200ms;
 	position: fixed;
-    top: 40px;
+    top: 37px;/*Было 40*/
     left: 0;
     height: 100%;
 }
@@ -393,7 +393,7 @@ header{
     max-height: 100%;
     padding-bottom: 30px;
     line-height: 8px;
-    top: 40px;
+    top: 37px; /*Было 40*/
 }
 
 .mobile__menu_content ul {
